[gd_scene load_steps=7 format=2]

[ext_resource path="res://Common/Player.gd" type="Script" id=1]
[ext_resource path="res://Common/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/SuperMario.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )
bulletScene = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="StartPosition"]
position = Vector2( 35, -12 )
rotation = 0.261799
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
